--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -3,12 +3,123 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# **About Dataset**\n",
+    "### **Context**\n",
+    "Problem Statement\n",
+    "\n",
+    "Customer Personality Analysis is a detailed analysis of a company’s ideal customers. It helps a business to better understand its customers and makes it easier for them to modify products according to the specific needs, behaviors and concerns of different types of customers.\n",
+    "\n",
+    "Customer personality analysis helps a business to modify its product based on its target customers from different types of customer segments. For example, instead of spending money to market a new product to every customer in the company’s database, a company can analyze which customer segment is most likely to buy the product and then market the product only on that particular segment.\n",
+    "\n",
+    "Content\n",
+    "Attributes\n",
+    "\n",
+    "People\n",
+    "\n",
+    "ID: Customer's unique identifier\n",
+    "Year_Birth: Customer's birth year\n",
+    "Education: Customer's education level\n",
+    "Marital_Status: Customer's marital status\n",
+    "Income: Customer's yearly household income\n",
+    "Kidhome: Number of children in customer's household\n",
+    "Teenhome: Number of teenagers in customer's household\n",
+    "Dt_Customer: Date of customer's enrollment with the company\n",
+    "Recency: Number of days since customer's last purchase\n",
+    "Complain: 1 if the customer complained in the last 2 years, 0 otherwise\n",
+    "Products\n",
+    "\n",
+    "MntWines: Amount spent on wine in last 2 years\n",
+    "MntFruits: Amount spent on fruits in last 2 years\n",
+    "MntMeatProducts: Amount spent on meat in last 2 years\n",
+    "MntFishProducts: Amount spent on fish in last 2 years\n",
+    "MntSweetProducts: Amount spent on sweets in last 2 years\n",
+    "MntGoldProds: Amount spent on gold in last 2 years\n",
+    "Promotion\n",
+    "\n",
+    "NumDealsPurchases: Number of purchases made with a discount\n",
+    "AcceptedCmp1: 1 if customer accepted the offer in the 1st campaign, 0 otherwise\n",
+    "AcceptedCmp2: 1 if customer accepted the offer in the 2nd campaign, 0 otherwise\n",
+    "AcceptedCmp3: 1 if customer accepted the offer in the 3rd campaign, 0 otherwise\n",
+    "AcceptedCmp4: 1 if customer accepted the offer in the 4th campaign, 0 otherwise\n",
+    "AcceptedCmp5: 1 if customer accepted the offer in the 5th campaign, 0 otherwise\n",
+    "Response: 1 if customer accepted the offer in the last campaign, 0 otherwise\n",
+    "Place\n",
+    "\n",
+    "NumWebPurchases: Number of purchases made through the company’s website\n",
+    "NumCatalogPurchases: Number of purchases made using a catalogue\n",
+    "NumStorePurchases: Number of purchases made directly in stores\n",
+    "NumWebVisitsMonth: Number of visits to company’s website in the last month\n",
+    "Target\n",
+    "Need to perform clustering to summarize customer segments.\n",
+    "\n",
+    "Acknowledgement\n",
+    "The dataset for this project is provided by Dr. Omar Romero-Hernandez.\n",
+    "\n",
+    "Solution\n",
+    "You can take help from following link to know more about the approach to solve this problem.\n",
+    "Visit this URL\n",
+    "\n",
+    "Inspiration\n",
+    "happy learning….\n",
+    "\n",
+    "Hope you like this dataset please don't forget to like this dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=pd.read_csv(\"./data/marketing_campaign.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "MLD",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
