--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -63,22 +63,43 @@
     "#### Inspiration\n",
     "happy learning….\n",
     "\n",
-    "Hope you like this dataset please don't forget to like this notebook"
+    "Hope you like this dataset please don't forget to like this notebook\n",
+    "\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "link: (url)[\"https://www.kaggle.com/datasets/imakash3011/customer-personality-analysis?select=marketing_campaign.csv\"]"
+    "- About the author : Sajjad Ali Shah\n",
+    "- Linkedin :\n",
+    "- Dataset link: (url)[\"https://www.kaggle.com/datasets/imakash3011/customer-personality-analysis?select=marketing_campaign.csv\"]\n",
+    "\n",
+    "---"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<div style=\"background-color:#f74065; padding:10px; border-radius:8px; text-align:center;\">\n",
+    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
+    "        <span style=\"font-size:25px;\">📚</span> 1. Import Necessary Libraries\n",
+    "    </h2>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#D91656; padding:10px; border-radius:8px; text-align:center;\">\n",
+    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
+    "        <span style=\"font-size:25px;\">📚</span> 1. Import Necessary Libraries\n",
+    "    </h2>\n",
+    "</div>\n"
+   ]
   },
   {
    "cell_type": "code",
