--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -72,22 +72,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- About the author : Sajjad Ali Shah\n",
-    "- Linkedin :\n",
-    "- Dataset link: (url)[\"https://www.kaggle.com/datasets/imakash3011/customer-personality-analysis?select=marketing_campaign.csv\"]\n",
+    "- **About the author:** Sajjad Ali Shah\n",
+    "- **LinkedIn:** [LinkedIn Profile](https://www.linkedin.com/in/sajjad-ali-shah47/)\n",
+    "- **Dataset link:** [Customer Personality Analysis Dataset](https://www.kaggle.com/datasets/imakash3011/customer-personality-analysis?select=marketing_campaign.csv)\n",
     "\n",
     "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"background-color:#f74065; padding:10px; border-radius:8px; text-align:center;\">\n",
-    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
-    "        <span style=\"font-size:25px;\">📚</span> 1. Import Necessary Libraries\n",
-    "    </h2>\n",
-    "</div>\n"
    ]
   },
   {
