--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![My Image](./image/customer.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# **About Dataset**\n",
     "### **Context**\n",
     "### Problem Statement\n",
