--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -1261,7 +1261,7 @@
    "source": [
     "<div style=\"background-color:#D91656; padding:10px; border-radius:8px; text-align:center;\">\n",
     "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
-    "        <span style=\"font-size:25px;\">📚</span> 5. Dealing with Outliers\n",
+    "        <span style=\"font-size:25px;\">📚</span> 4. DATA PREPROCESSING\n",
     "    </h2>\n",
     "</div>\n"
    ]
@@ -1553,6 +1553,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#D91656; padding:10px; border-radius:8px; text-align:center;\">\n",
+    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
+    "        <span style=\"font-size:25px;\">📚</span> 5. DIMENSIONALITY REDUCTION\n",
+    "    </h2>\n",
+    "</div>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1681,12 +1692,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 80,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# !pip install yellowbrick"
+    "<div style=\"background-color:#D91656; padding:10px; border-radius:8px; text-align:center;\">\n",
+    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
+    "        <span style=\"font-size:25px;\">📚</span> 6. CLUSTERING\n",
+    "</div>\n"
    ]
   },
   {
@@ -1771,6 +1783,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#D91656; padding:10px; border-radius:8px; text-align:center;\">\n",
+    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
+    "        <span style=\"font-size:25px;\">📚</span> 7. EVALUATING MODELS\n",
+    "</div>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1799,6 +1821,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#D91656; padding:10px; border-radius:8px; text-align:center;\">\n",
+    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
+    "        <span style=\"font-size:25px;\">📚</span> 8. CONCLUSION\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#D91656; padding:10px; border-radius:8px; text-align:center;\">\n",
+    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
+    "        <span style=\"font-size:25px;\">📚</span> 9. END\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
