--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -2618,7 +2618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2643,6 +2643,7 @@
     }
    ],
    "source": [
+    "# Plotting the correlation matrix\n",
     "plt.figure(figsize=(30,25))\n",
     "sns.heatmap(df.corr(), annot=True,cmap = 'Oranges',linewidths=1)"
    ]
