--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -2652,7 +2652,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"background-color:#D91656; padding:10px; border-radius:8px; text-align:center;\">\n",
+    "<div style=\"background-color:#C40C0C; padding:10px; border-radius:8px; text-align:center;\">\n",
     "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
     "        <span style=\"font-size:25px;\">📝</span> 8. CONCLUSION\n",
     "    </h2>\n",
