--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -1105,7 +1105,7 @@
    "source": [
     "## ✨ Clustering with KMeans\n",
     "\n",
-    "<div style=\"border: 2px solid #324D5C; padding: 20px; border-radius: 10px; background-color: #E9EEF3; color: #333; font-size: 1em;\">\n",
+    "<div style=\"border: 2px solid #324D5C; padding: 20px; border-radius: 10px; color: #333; font-size: 1em;\">\n",
     "\n",
     "### Brief explanation of clustering with KMeans:\n",
     "\n",
