--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -1103,17 +1103,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ✨ Clustering with KMeans\n",
+    "## ✨ Marital Status Distribution of Customers\n",
     "\n",
-    "<div style=\"border: 2px solid #324D5C; padding: 20px; border-radius: 10px; color: #333; font-size: 1em;\">\n",
+    "<div style=\"border: 1px solid #324D5C; padding: 20px; border-radius: 10px; color: #333; font-size: 1em;\">\n",
     "\n",
-    "### Brief explanation of clustering with KMeans:\n",
+    "### Breakdown of Customer Marital Status:\n",
     "\n",
-    "- 🔴 **Initialization**: The algorithm starts by randomly selecting a predefined number of cluster centers (centroids).\n",
-    "- 📍 **Assignment**: Each data point is then assigned to the nearest centroid, forming initial clusters.\n",
-    "- 🔄 **Update**: The centroids are recalculated as the average position of all points within each cluster.\n",
-    "- 🔁 **Iteration**: The process of assignment and updating continues until the centroids stabilize and no longer change significantly.\n",
-    "- 🟡 **Final Output**: The result is a set of clusters where data points in the same cluster are more similar to each other than to those in other clusters.\n",
+    "- 📊 **Married**: 857 customers, representing the largest group, indicating a substantial customer base of married individuals.\n",
+    "- 📊 **Together**: 573 customers, a significant segment who are in relationships.\n",
+    "- 📊 **Single**: 471 customers, making up a notable part of the customer base.\n",
+    "- 📊 **Divorced**: 232 customers, showing a moderate presence of divorced individuals.\n",
+    "- 📊 **Widow**: 76 customers, a smaller but still relevant group.\n",
+    "- 📊 **Alone**: 3 customers, a very small segment of customers who identify as alone.\n",
+    "- 📊 **Absurd and YOLO**: 2 customers each, likely representing unique or non-standard entries.\n",
+    "\n",
+    "### Insights:\n",
+    "\n",
+    "- 👥 **Married and Together**: These two categories form the majority, possibly indicating a preference for products/services appealing to partnered individuals.\n",
+    "- 📈 **Single and Divorced**: Although smaller in number, they still represent a considerable segment that could be targeted with specific marketing strategies.\n",
+    "- ⚠️ **Outliers**: Categories like \"Absurd\" and \"YOLO\" may need review for data quality or validation purposes.\n",
     "\n",
     "</div>\n"
    ]
