--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -1103,11 +1103,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ✨ Marital Status Distribution of Customers\n",
-    "\n",
     "<div style=\"border: 1px solid #324D5C; padding: 20px; border-radius: 10px; color: #333; font-size: 1em;\">\n",
     "\n",
-    "### Breakdown of Customer Marital Status:\n",
+    "### ✨Breakdown of Customer Marital Status:\n",
     "\n",
     "- 📊 **Married**: 857 customers, representing the largest group, indicating a substantial customer base of married individuals.\n",
     "- 📊 **Together**: 573 customers, a significant segment who are in relationships.\n",
