--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -1029,6 +1029,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"border: 1px solid #324D5C; padding: 20px; border-radius: 10px; color: #333; font-size: 1em;\">\n",
+    "\n",
+    "### Customer Age Group Breakdown:\n",
+    "\n",
+    "- 🎂 **30-40**: 193 customers, representing younger adults with potential for long-term engagement.\n",
+    "- 🎂 **40-50**: 309 customers, a growing segment approaching middle age.\n",
+    "- 🎂 **50-60**: 388 customers, the largest group, indicating the core demographic is middle-aged.\n",
+    "- 🎂 **60-70**: 290 customers, showing strong representation in older adulthood.\n",
+    "- 🎂 **70-80**: 246 customers, continuing a steady trend in the senior category.\n",
+    "- 🎂 **80-90**: 91 customers, indicating some engagement in advanced age.\n",
+    "- 🎂 **90+**: 18 customers, a very small segment of very elderly customers.\n",
+    "\n",
+    "### Key Observations:\n",
+    "\n",
+    "- 💼 **Core Demographic (50-60)**: This age group forms the largest customer base, suggesting that products/services might appeal most to middle-aged individuals.\n",
+    "- 📉 **Declining Trend with Age**: As age increases beyond 60, the number of customers gradually decreases, indicating less engagement among older seniors.\n",
+    "- 📈 **Potential Growth Areas**: The 30-40 age group could be nurtured for long-term loyalty, as they may have different needs and preferences.\n",
+    "- 🧓 **Senior Presence**: While numbers decrease with age, there is still a notable segment in the 60-80 range, suggesting that targeted offerings for senior customers could be beneficial.\n",
+    "- ⚠️ **Outliers**: There are very few customers above 90, possibly indicating limited engagement from extremely elderly individuals.\n",
+    "\n",
+    "</div>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
@@ -1060,6 +1087,29 @@
     "plt.ylabel('Frequency', fontsize=14)\n",
     "plt.grid(True, linestyle='--', alpha=0.6)\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"border: 1px solid #324D5C; padding: 20px; border-radius: 10px; color: #333; font-size: 1em;\">\n",
+    "\n",
+    "### ✨ Breakdown of Customer Education Levels:\n",
+    "\n",
+    "- 📊 **Graduation**: 1116 customers, forming the largest group, indicating a high level of educational attainment.\n",
+    "- 📊 **PhD**: 481 customers, a significant segment with advanced academic qualifications.\n",
+    "- 📊 **Master**: 365 customers, making up a considerable portion of the customer base with postgraduate education.\n",
+    "- 📊 **2nd Cycle**: 200 customers, representing individuals with some higher education but possibly not a completed degree.\n",
+    "- 📊 **Basic**: 54 customers, a smaller group with basic education levels.\n",
+    "\n",
+    "### Insights:\n",
+    "\n",
+    "- 🎓 **Higher Education**: The majority of customers have attained at least a graduate level of education, indicating that the customer base is highly educated.\n",
+    "- 📉 **Lower Levels**: A much smaller percentage of customers have only a basic education, suggesting a market with a predominantly higher-educated demographic.\n",
+    "- 🔍 **Targeting Potential**: Strategies can be tailored to appeal to customers with higher education backgrounds, as they form the majority.\n",
+    "\n",
+    "</div>\n"
    ]
   },
   {
@@ -1157,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1179,14 +1229,14 @@
           2
          ],
          "y": [
-          1283,
-          887,
+          1057,
+          849,
           46
          ]
         },
         {
          "marker": {
-          "color": "#FFB38E"
+          "color": "#CC2B52"
          },
          "name": "Teenhome",
          "type": "bar",
@@ -1196,9 +1246,9 @@
           2
          ],
          "y": [
-          1147,
-          1018,
-          51
+          965,
+          943,
+          44
          ]
         }
        ],
@@ -2060,7 +2110,7 @@
     "    x=all_indices,\n",
     "    y=teenhome_counts.values,\n",
     "    name='Teenhome',\n",
-    "    marker=dict(color='#FFB38E')  # Using color #FA4032 for Teenhome\n",
+    "    marker=dict(color='#CC2B52')  # Using color #FA4032 for Teenhome\n",
     ")\n",
     "# Create the figure\n",
     "fig = go.Figure(data=[trace_kidhome, trace_teenhome])\n",
