--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -3147,6 +3147,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"border: 1px solid #324D5C; padding: 20px; border-radius: 10px; color: #333; font-size: 1em;\">\n",
+    "\n",
+    "### Spending Breakdown by Category:\n",
+    "\n",
+    "- 🍷 **MntWines**: 50.3%, indicating that wine purchases dominate the spending, suggesting high interest in this product category.\n",
+    "- 🍖 **MntMeatProducts**: 27.5%, representing a significant portion of spending, indicating meat products are also highly popular.\n",
+    "- 🐟 **MntFishProducts**: 6.2%, a smaller segment showing moderate interest in fish products.\n",
+    "- 💰 **MntGoldProds**: 7.2%, showing notable spending on premium or luxury products.\n",
+    "- 🍬 **MntSweetProducts**: 4.5%, indicating some interest in sweet products, but less prominent.\n",
+    "- 🍎 **MntFruits**: 4.3%, suggesting the lowest level of spending in this category.\n",
+    "\n",
+    "### Key Observations:\n",
+    "\n",
+    "- 💼 **Core Spending Category (MntWines)**: Wine products make up over half of the total spending, indicating a strong preference or demand for this product category among customers.\n",
+    "- 📉 **Lower Spending Categories**: MntFruits and MntSweetProducts account for the smallest portions of spending, possibly indicating less demand for these items.\n",
+    "- 📈 **Potential Growth Areas**: MntMeatProducts represents a significant part of spending, so promotions or targeted campaigns in this area could be effective.\n",
+    "- 🏆 **High-Value Products**: MntGoldProds has a reasonable share, suggesting customer interest in premium products.\n",
+    "\n",
+    "</div>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
