--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -1224,6 +1224,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"border: 1px solid #324D5C; padding: 15px; border-radius: 10px; color: #333; font-size: 0.9em;\">\n",
+    "\n",
+    "### 💰 Income Distribution Summary\n",
+    "\n",
+    "- 📊 **0-100,000**: Majority of customers, representing moderate incomes.\n",
+    "- 📈 **100,000 - 200,000**: Small higher-income segment.\n",
+    "- 📉 **200,000+**: Few high-income customers; limited engagement from this group.\n",
+    "- ⚠️ **Outlier**: One customer with income over 600,000.\n",
+    "\n",
+    "### 🔍 Insights\n",
+    "\n",
+    "- 💼 **Core Group**: Customers with incomes under 100,000 are the largest demographic.\n",
+    "- 🏆 **Higher-Income Potential**: Small representation from high-income customers suggests room for growth.\n",
+    "- 🚨 **Extreme Outlier**: The high-income outlier could offer unique insights.\n",
+    "\n",
+    "</div>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 70,
    "metadata": {},
