--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -3123,6 +3123,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"border: 1px solid #324D5C; padding: 20px; border-radius: 10px; color: #333; font-size: 1em;\">\n",
+    "\n",
+    "# 📊 Distribution of Purchases and Web Visits across Product Categories\n",
+    "\n",
+    "This donut chart displays the distribution of various purchase and visit types, offering insight into customer behavior across different channels.\n",
+    "\n",
+    "### 🛒 Category Breakdown:\n",
+    "- 🏬 **NumStorePurchases**: 28.7% – Represents the percentage of purchases made in physical stores, indicating a preference for in-person shopping.\n",
+    "- 🌐 **NumWebVisitsMonth**: 26.3% – Shows the proportion of web visits each month, suggesting strong online engagement and browsing interest.\n",
+    "- 💻 **NumWebPurchases**: 20.2% – Denotes the percentage of purchases completed through the web, slightly lower than web visits.\n",
+    "- 📖 **NumCatalogPurchases**: 13.2% – Indicates purchases made through catalogs, highlighting some interest in catalog-based shopping.\n",
+    "- 🏷️ **NumDealsPurchases**: 11.5% – Shows purchases made during promotional deals, the smallest share in this chart, implying less influence of discounts on customer decisions.\n",
+    "\n",
+    "### 🔍 Key Observations:\n",
+    "- **🏬 Store Purchases Dominance**: Physical store purchases hold the highest share, suggesting a preference for in-store shopping among customers.\n",
+    "- **🌐 Web Visits vs. Online Purchases**: High web visit rates indicate online engagement, but the gap with web purchases suggests room to improve online conversion rates.\n",
+    "- **🏷️ Deals**: The smallest portion of purchases is from deals, possibly showing that customers are less influenced by discounts, or that fewer promotional deals are available.\n",
+    "\n",
+    "</div>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -3148,6 +3173,30 @@
     "plt.xlabel('Complain')\n",
     "plt.ylabel('Response')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"border: 1px solid #324D5C; padding: 20px; border-radius: 10px; color: #333; font-size: 1em;\">\n",
+    "\n",
+    "# 🔥 Heatmap of Response vs Complain\n",
+    "\n",
+    "This heatmap illustrates the interaction between customer complaints and the response they received.\n",
+    "\n",
+    "### 📊 Breakdown of Values:\n",
+    "- **🙅 Response 0, Complain 0**: 1865 – Most users did not complain and did not receive a response.\n",
+    "- **📣 Response 0, Complain 1**: 18 – A small number complained but received no response.\n",
+    "- **👍 Response 1, Complain 0**: 330 – Many users received a response without filing a complaint, possibly indicating proactive service.\n",
+    "- **✅ Response 1, Complain 1**: 3 – Very few users both complained and received a response.\n",
+    "\n",
+    "### 🔍 Key Observations:\n",
+    "- **Majority Non-Complaint**: The bulk of users fall under no complaints and no response, possibly indicating satisfaction.\n",
+    "- **Proactive Responses**: A considerable number of users received responses without complaints, which may highlight proactive customer service.\n",
+    "- **Rare Complaints and Responses**: Complaints are minimal, and even fewer result in responses, which could suggest low dissatisfaction or limited response strategies.\n",
+    "\n",
+    "</div>\n"
    ]
   },
   {
