--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -908,9 +908,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the above output, we can conclude and note that:\n",
+    "<div style=\"border: 1px solid #324D5C; padding: 20px; border-radius: 10px; color: #333; font-size: 1em;\">\n",
     "\n",
-    "- There are missing values in income"
+    "### 📝 Conclusion:\n",
+    "- 💸 There are 24 missing values in the income column.\n",
+    "\n",
+    "</div>\n"
    ]
   },
   {
@@ -938,6 +941,20 @@
    ],
    "source": [
     "print(f\"Missing values in data: {df.isnull().sum().sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"border: 1px solid #324D5C; padding: 20px; border-radius: 10px; color: #333; font-size: 1em;\">\n",
+    "\n",
+    "### 🔍 Key Observations:\n",
+    "- 📈 No missing values in the data.\n",
+    "- 🚫 No duplicate data.\n",
+    "- 🔢 Most columns are numerical.\n",
+    "\n",
+    "</div>\n"
    ]
   },
   {
@@ -2203,6 +2220,30 @@
     "plt.title('Distribution of spending across product categories', fontsize=16)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"border: 1px solid #324D5C; padding: 20px; border-radius: 10px; color: #333; font-size: 1em;\">\n",
+    "\n",
+    "# 📊 Distribution of Spending Across Product Categories\n",
+    "\n",
+    "This bar chart illustrates the distribution of spending across different product categories based on accepted campaigns.\n",
+    "\n",
+    "### 💸 Spending Breakdown:\n",
+    "- **📈 AcceptedCmp3**: ~160 – High spending, indicating strong acceptance or demand.\n",
+    "- **📈 AcceptedCmp4**: ~160 – High spending, similar to AcceptedCmp3.\n",
+    "- **📈 AcceptedCmp5**: ~160 – Matches AcceptedCmp3 and AcceptedCmp4 in spending, showing equal popularity.\n",
+    "- **📉 AcceptedCmp1**: ~140 – Slightly lower but still significant spending.\n",
+    "- **📉 AcceptedCmp2**: ~40 – The lowest among categories, indicating less engagement.\n",
+    "\n",
+    "### 🔍 Key Observations:\n",
+    "- **Top Categories**: The high spending in AcceptedCmp3, AcceptedCmp4, and AcceptedCmp5 suggests these campaigns were the most successful.\n",
+    "- **Lower Spending Category**: AcceptedCmp2 has a much lower spending total, possibly due to reduced appeal or effectiveness.\n",
+    "\n",
+    "</div>\n"
    ]
   },
   {
