--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -814,6 +814,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div style=\"border: 1px solid #324D5C; padding: 20px; border-radius: 10px; color: #333; font-size: 1em;\">\n",
+    "\n",
+    "### 🔍 Observations:\n",
+    "- 📊 There are **2240 rows** and **29 columns** in our data  \n",
+    "- 🗂️ Only **3 columns** are of **object** type\n",
+    "\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div style=\"background-color:#C40C0C; padding:10px; border-radius:8px; text-align:center;\">\n",
     "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
     "        <span style=\"font-size:25px;\">🧹</span> 2. Data Cleaning\n",
