--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -1008,90 +1008,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 427,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Combining columns together to reduce number of dimensions\n",
-    "# df['Kids'] = df['Kidhome'] + df['Teenhome']\n",
-    "# df['Expenses'] = df['MntWines'] + df['MntFruits'] + df['MntMeatProducts'] + df['MntFishProducts'] + df['MntSweetProducts'] + df['MntGoldProds']\n",
-    "\n",
-    "# df['TotalAcceptedCmp'] = df['AcceptedCmp1'] + df['AcceptedCmp2'] + df['AcceptedCmp3'] + df['AcceptedCmp4'] + df['AcceptedCmp5']\n",
-    "\n",
-    "# df['TotalNumPurchases'] = df['NumWebPurchases'] + df['NumCatalogPurchases'] + df['NumStorePurchases'] + df['NumDealsPurchases']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 428,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = df.copy()\n",
-    "# df = df[['Education', 'Marital_Status', 'Income', 'Kids', 'Days_of_client', 'Recency', 'Expenses', 'TotalNumPurchases', 'TotalAcceptedCmp', 'Complain', 'Response']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 429,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Categorize columns into three groups based on their data type\n",
-    "\n",
-    "# df = df[['Education', 'Marital_Status', 'Income', 'Kids', 'Days_of_client', 'Recency', 'Expenses', 'TotalNumPurchases', 'TotalAcceptedCmp', 'Complain', 'Response']]\n",
-    "\n",
-    "# binary_columns = [col for col in df.columns if df[col].nunique() == 2]\n",
-    "# categorical_columns = [col for col in df.columns if 2 < df[col].nunique() < 10]\n",
-    "# numerical_columns = [col for col in df.select_dtypes(include=['number']).columns \n",
-    "#                      if col not in binary_columns + categorical_columns]\n",
-    "\n",
-    "\n",
-    "# ## Detecting Outliers\n",
-    "\n",
-    "# # Calculate the z-scores for each column\n",
-    "# z_scores = pd.DataFrame(stats.zscore(df[numerical_columns]), columns=numerical_columns)\n",
-    "\n",
-    "# # Generate descriptive statistics for the z-scores\n",
-    "# print(\"Descriptive Statistics for Z-Scores before Outliers Removal\")\n",
-    "# display(z_scores.describe().round(3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 430,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ## Detecting Outliers\n",
-    "\n",
-    "# # Calculate the z-scores for each column\n",
-    "# z_scores = pd.DataFrame(stats.zscore(df[numerical_columns]), columns=numerical_columns)\n",
-    "\n",
-    "# # Generate descriptive statistics for the z-scores\n",
-    "# print(\"Descriptive Statistics for Z-Scores before Outliers Removal\")\n",
-    "# display(z_scores.describe().round(3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 431,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Categorize columns into three groups based on their data type\n",
-    "# binary_columns = [col for col in df.columns if df[col].nunique() == 2]\n",
-    "# categorical_columns = [col for col in df.columns if df[col].nunique() > 2 and df[col].nunique() < 10]\n",
-    "# numerical_columns = [col for col in df.select_dtypes(include=['number']).columns if col not in binary_columns + categorical_columns]\n",
-    "\n",
-    "# # Print the categorized columns\n",
-    "# print(\"Binary columns:\", binary_columns)\n",
-    "# print(\"Categorical columns:\", categorical_columns)\n",
-    "# print(\"Numerical columns:\", numerical_columns)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3382,7 +3298,7 @@
    "source": [
     "<div style=\"background-color:#C40C0C; padding:10px; border-radius:8px; text-align:center;\">\n",
     "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
-    "        <span style=\"font-size:25px;\">⚙️</span> 4. Remove Outliers\n",
+    "        <span style=\"font-size:25px;\">🚫</span> 4. Remove Outliers\n",
     "    </h2>\n",
     "</div>\n"
    ]
