--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -847,7 +847,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"border: 1px solid #324D5C; padding: 20px; border-radius: 10px; color: #333; font-size: 1em;\">\n",
+    "<div style=\"border: 1px solid #4CAF50; padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;\">\n",
     "\n",
     "### 🔍 Observations:\n",
     "- 📊 There are **2240 rows** and **29 columns** in our data  \n",
