--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -847,11 +847,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"border: 1px solid #4CAF50; padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;\">\n",
+    "<div style=\"border: 1px solid rgba(76, 175, 80, 0.5); padding: 20px; border-radius: 10px; background-color: rgba(50, 50, 50, 0.1); color: rgba(0, 0, 0, 0.87); font-size: 1em;\">\n",
     "\n",
     "### 🔍 Observations:\n",
-    "- 📊 There are **2240 rows** and **29 columns** in our data  \n",
-    "- 🗂️ Only **3 columns** are of **object** type\n",
+    "\n",
+    "- 📊 <strong style=\"color: rgba(0, 0, 0, 0.87);\">There are 2240 rows and 29 columns</strong> in our data.\n",
+    "- 📁 <strong style=\"color: rgba(0, 0, 0, 0.87);\">Only 3 columns are of object type</strong>.\n",
     "\n",
     "</div>\n"
    ]
