--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -847,12 +847,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"border: 1px solid rgba(76, 175, 80, 0.5); padding: 20px; border-radius: 10px; background-color: rgba(50, 50, 50, 0.1); color: rgba(0, 0, 0, 0.87); font-size: 1em;\">\n",
+    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;\">\n",
     "\n",
     "### 🔍 Observations:\n",
     "\n",
-    "- 📊 <strong style=\"color: rgba(0, 0, 0, 0.87);\">There are 2240 rows and 29 columns</strong> in our data.\n",
-    "- 📁 <strong style=\"color: rgba(0, 0, 0, 0.87);\">Only 3 columns are of object type</strong>.\n",
+    "- 📊 **There are 2240 rows and 29 columns** in our data.\n",
+    "- 📁 **Only 3 columns are of object type**.\n",
     "\n",
     "</div>\n"
    ]
@@ -956,8 +956,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"border: 1px solid #324D5C; padding: 20px; border-radius: 10px; color: #333; font-size: 1em;\">\n",
-    "\n",
+    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;\">\n",
+    "  \n",
     "### 📝 Conclusion:\n",
     "- 💸 There are 24 missing values in the income column.\n",
     "\n",
@@ -1056,7 +1056,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"border: 1px solid #324D5C; padding: 20px; border-radius: 10px; color: #333; font-size: 1em;\">\n",
+    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;\">\n",
     "\n",
     "### Customer Age Group Breakdown:\n",
     "\n",
@@ -1117,7 +1117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"border: 1px solid #324D5C; padding: 20px; border-radius: 10px; color: #333; font-size: 1em;\">\n",
+    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;\">\n",
     "\n",
     "### ✨ Breakdown of Customer Education Levels:\n",
     "\n",
@@ -1177,7 +1177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"border: 1px solid #324D5C; padding: 20px; border-radius: 10px; color: #333; font-size: 1em;\">\n",
+    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;\">\n",
     "\n",
     "### ✨Breakdown of Customer Marital Status:\n",
     "\n",
@@ -1233,7 +1233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"border: 1px solid #324D5C; padding: 15px; border-radius: 10px; color: #333; font-size: 0.9em;\">\n",
+    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;\">\n",
     "\n",
     "### 💰 Income Distribution Summary\n",
     "\n",
@@ -2215,7 +2215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"border: 1px solid #324D5C; padding: 20px; border-radius: 10px; color: #333; font-size: 1em;\">\n",
+    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;\">\n",
     "\n",
     "# 📊 Distribution of Spending Across Product Categories\n",
     "\n",
@@ -3156,7 +3156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"border: 1px solid #324D5C; padding: 20px; border-radius: 10px; color: #333; font-size: 1em;\">\n",
+    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;;\">\n",
     "\n",
     "# 📊 Distribution of Purchases and Web Visits across Product Categories\n",
     "\n",
@@ -3209,7 +3209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"border: 1px solid #324D5C; padding: 20px; border-radius: 10px; color: #333; font-size: 1em;\">\n",
+    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;;\">\n",
     "\n",
     "# 🔥 Heatmap of Response vs Complain\n",
     "\n",
@@ -3269,7 +3269,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"border: 1px solid #324D5C; padding: 20px; border-radius: 10px; color: #333; font-size: 1em;\">\n",
+    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;;\">\n",
     "\n",
     "### Spending Breakdown by Category:\n",
     "\n",
@@ -11866,7 +11866,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"border: 1px solid #324D5C; padding: 20px; border-radius: 10px; color: #333; font-size: 1em;\">\n",
+    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;;\">\n",
     "\n",
     "### Customer Clusters Analysis:\n",
     "\n",
@@ -12063,7 +12063,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"border: 1px solid #324D5C; padding: 20px; border-radius: 10px; color: #333; font-size: 1em;\">\n",
+    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;;\">\n",
     "\n",
     "### Project Summary: Unsupervised Clustering Analysis\n",
     "\n",
