--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -995,7 +995,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"border: 1px solid #324D5C; padding: 20px; border-radius: 10px; color: #333; font-size: 1em;\">\n",
+    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;;\">\n",
     "\n",
     "### 🔍 Key Observations:\n",
     "- 📈 No missing values in the data.\n",
